correctly using openai api class in the webworker

--- a/api_webchat/index.html
+++ b/api_webchat/index.html
@@ -13,8 +13,9 @@
     </div>
 
     <!-- Include the JavaScript files at bottom to avoid blocking UI -->
-    <script src="messageInput.js" defer></script>
+    <!-- <script src="../js/api/openai.js" type="module" defer></script> -->
+    <script src="messageInput.js" type="module" defer></script>
     <script src="markdown-it.min.js"></script>
-    <script src="messagesArea.js" defer></script>
-    <script src="controller.js" defer></script>
+    <script src="messagesArea.js" type="module" defer></script>
+    <script src="controller.js" type="module" defer></script>
 </body>
