--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">__MSG_prefs_OptionText_release_notes__</a></div>
-    <div id="miczStatusPage"><a href="https://micz.it/thunderbird-addon-thunderai/status/">__MSG_prefs_status_page__</a></div>
+    <div id="miczStatusPage" class="conntype_chatgpt_web"><a href="https://micz.it/thunderbird-addon-thunderai/status/">__MSG_prefs_status_page__</a></div>
     <table id="miczPrefs">
       <tr>
         <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span></td>
@@ -60,6 +60,22 @@
         </td>
       </tr>
       <tr>
+        <td>
+          <label>
+            <span>__MSG_prefs_Connection_type__</span>
+          </label>
+        </td>
+        <td>
+          <label>
+            <select id="connection_type" name="connection_type" class="option-input">
+              <option value="chatgpt_web">__MSG_prefs_Connection_type_ChatGTP_Web__</option>
+              <option value="chatgpt_api">__MSG_prefs_Connection_type_ChatGTP_API__</option>
+            </select>
+          </label>
+        </td>
+      </tr>
+      <tr>
+      <tr class="conntype_chatgpt_web">
         <td><label>
           <span>__MSG_prefs_OptionText_chatpgt_keep_formatting__</span>
         </label></td>
@@ -70,7 +86,7 @@
           </label>
         </td>
       </tr>
-      <tr>
+      <tr class="conntype_chatgpt_web">
         <td><label>
           <span>__MSG_prefs_OptionText_chatpgt_use_gpt4__</span>
         </label></td>
@@ -81,24 +97,13 @@
           </label>
         </td>
       </tr>
-      <tr>
+      <tr class="conntype_chatgpt_api">
         <td><label>
-          <span>API Activate</span>
+          <span>__MSG_prefs_ChatGPT_API_Key__</span>
         </label></td>
         <td>
           <label>
-            <input type="checkbox" id="api_active" name="api_active" class="option-input" />
-            &nbsp;<span>Use that OpenAI API!</span>
-          </label>
-        </td>
-      </tr>
-      <tr>
-        <td><label>
-          <span>ChatGPT API Key</span>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="api_key_chatgpt" name="api_key_chatgpt" class="option-input" />
+            <input type="text" id="api_key_chatgpt" name="api_key_chatgpt" class="option-input" style="width:28em" />
             &nbsp;<span></span>
           </label>
         </td>
