managing model in the options page. see #92

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -108,6 +108,20 @@
           </label>
         </td>
       </tr>
+      <tr class="conntype_chatgpt_api">
+        <td>
+          <label>
+            <span>__MSG_ChatGPT_Models__</span>
+          </label>
+        </td>
+        <td>
+          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button><br>
+          <label>
+            <select id="model_chatgpt" name="model_chatgpt" class="option-input">
+            </select>
+          </label>
+        </td>
+      </tr>
     </table>
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
