added a loading info when fetching models

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -115,7 +115,7 @@
           </label>
         </td>
         <td>
-          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button><br>
+          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button> <span id="model_fetch_loading">__MSG_ChatGPT_Models_Loading__</span><br>
           <label>
             <select id="model_chatgpt" name="model_chatgpt" class="option-input">
             </select>
