--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -128,9 +128,9 @@
     </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
-      <p>__MSG_prefsInfoDesc_1__<br/>
-        __MSG_prefsInfoDesc_2__<br/>
-        __MSG_prefsInfoDesc_3__</p>
+      <p><span class="conntype_chatgpt_web">__MSG_prefsInfoDesc_1__<br/></span>
+        <span class="conntype_chatgpt_api">__MSG_prefsInfoDesc_2__<br/>
+        __MSG_prefsInfoDesc_3__</span></p>
     </div>
     <div id="miczTranslate">__MSG_TranslateText__ <a href="https://micz.it/thunderbird-addon-thunderai/translate/">__MSG_TranslateLink__</a></div>
     <div id="miczDonation">__MSG_prefsDonation_1__<br/><a href="http://micz.it/thunderbird-addon-thunderai/donate/">__MSG_prefsDonation_2__</a></div>
