chatgpt api prefs renamed

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -103,7 +103,7 @@
         </label></td>
         <td>
           <label>
-            <input type="text" id="api_key_chatgpt" name="api_key_chatgpt" class="option-input" style="width:28em" />
+            <input type="text" id="chatgpt_api_key" name="chatgpt_api_key" class="option-input" style="width:28em" />
             &nbsp;<span></span>
           </label>
         </td>
@@ -117,7 +117,7 @@
         <td>
           <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button> <span id="model_fetch_loading">__MSG_ChatGPT_Models_Loading__</span><br>
           <label>
-            <select id="model_chatgpt" name="model_chatgpt" class="option-input">
+            <select id="chatgpt_model" name="chatgpt_model" class="option-input">
             </select>
           </label>
         </td>
