--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,11 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.0.0pre1 - ??/??/2024</h2>
+      <h2>Version 2.0.0 - 30/07/2024</h2>
       <ul>
         <li>Added OpenAI ChatGPT API connection [<a href="https://github.com/micz/ThunderAI/issues/40">#40</a>].</li>
         <li>Information text in the options page improved.</li>
-        <li>...</li>
       </ul>
       <h2>Version 1.2.1 - 20/07/2024</h2>
       <ul>
