--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.0.2 - ??/??/2024</h2>
       <ul>
+        <li>Added a better error message when there is an error fetching models.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.0.1 - 09/08/2024</h2>
