--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 2.0.2 - ??/??/2024</h2>
       <ul>
         <li>Added a better error message when there is an error fetching models.</li>
+        <li>When selecting a correct model in the options page, the field is no more highlighted in red [<a href="https://github.com/micz/ThunderAI/issues/100">#100</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 2.0.1 - 09/08/2024</h2>
