--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,9 +9,10 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.0.2 - ??/??/2024</h2>
       <ul>
-        <li>Added a better error message when there is an error fetching models.</li>
+        <li><i>[ChatGPT Web]</i> Now, the ChatGPT response must be selected by the user to be retrieved by ThunderAI. A single click on the text should work, but it's also possible to select the text manually [<a href="https://github.com/micz/ThunderAI/issues/104">#104</a>].</li>
+        <li><i>[ChatGPT API]</i> Added a better error message when there is an error fetching models.</li>
         <li>When selecting a correct model in the options page, the field is no more highlighted in red [<a href="https://github.com/micz/ThunderAI/issues/100">#100</a>].</li>
-        <li>When using the ChatGPT API, the double quotes at the beginning and end of the response are removed [<a href="https://github.com/micz/ThunderAI/issues/99">#99</a>].</li>
+        <li><i>[ChatGPT API]</i> The double quotes at the beginning and end of the response are removed [<a href="https://github.com/micz/ThunderAI/issues/99">#99</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 2.0.1 - 09/08/2024</h2>
