--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.0.3 - 15/08/2024</h2>
       <ul>
-        <i>[ChatGPT API]</i> Fixed a loading bug in Thunderbird 128+ [<a href="https://github.com/micz/ThunderAI/issues/107">#107</a>].
+        <li><i>[ChatGPT API]</i> Fixed a loading bug in Thunderbird 128+ [<a href="https://github.com/micz/ThunderAI/issues/107">#107</a>].</li>
       </ul>
       <h2>Version 2.0.2 - 15/08/2024</h2>
       <ul>
