--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.0.4 - 16/08/2024</h2>
       <ul>
-        <li>...</li>
+        <li><i>[ChatGPT API]</i> Fixed the vertical scroolbar with long reponses [<a href="https://github.com/micz/ThunderAI/issues/108">#108</a>].</li>
       </ul>
       <h2>Version 2.0.3 - 15/08/2024</h2>
       <ul>
