--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,10 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.0.5 - ??/??/2024</h2>
+      <h2>Version 2.0.5 - 19/08/2024</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Modified the permissions for the ChatGPT web interface, now requiring only the <code>https://*.chatgpt.com/*</code> and not all sites.</li>
-        <li>...</li>
+        <li><i>[ChatGPT Web]</i> Fixed a problem loading the web interface on Thunderbird 115 under some circumstances.</li>
       </ul>
       <h2>Version 2.0.4 - 16/08/2024</h2>
       <ul>
