--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -111,6 +111,17 @@
           </label>
         </td>
       </tr>
+      <tr>
+        <td><label>
+          <span>__MSG_Debug__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="do_debug" name="do_debug" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_do_debug_info__</span>
+          </label>
+        </td>
+      </tr>
     </table>
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
