ollama_api: getting models list. see #79

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -105,7 +105,7 @@
           </label>
         </td>
         <td>
-          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button> <span id="model_fetch_loading">__MSG_Loading__</span><br>
+          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button> <span id="chatgpt_model_fetch_loading">__MSG_Loading__</span><br>
           <label>
             <select id="chatgpt_model" name="chatgpt_model" class="option-input">
             </select>
@@ -130,7 +130,7 @@
           </label>
         </td>
         <td>
-          <button id="btnUpdateChatGPTModels">__MSG_Ollama_Models_Fetch__</button> <span id="model_fetch_loading">__MSG_Loading__</span><br>
+          <button id="btnUpdateOllamaModels">__MSG_Ollama_Models_Fetch__</button> <span id="ollama_model_fetch_loading">__MSG_Loading__</span><br>
           <label>
             <select id="ollama_model" name="ollama_model" class="option-input">
             </select>
