--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.0.7 - 21/08/2024</h2>
       <ul>
-        <li>...</li>
+        <li><i>[ChatGPT Web]</i> Fixed an issue with automatically sending the prompt.</li>
       </ul>
       <h2>Version 2.0.6 - 19/08/2024</h2>
       <ul>
