no more quirks warning on api web chat

--- a/api_webchat/index.html
+++ b/api_webchat/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
     <!-- Other meta tags and stylesheets -->
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -18,3 +20,4 @@
     <script src="messagesArea.js" type="module" defer></script>
     <script src="controller.js" type="module" defer></script>
 </body>
+</html>
