added a status message. fixes #119

--- a/api_webchat/index.html
+++ b/api_webchat/index.html
@@ -9,7 +9,7 @@
     <!-- Use the custom tags directly -->
     <div id="appContainer">
         <messages-area></messages-area>
-        <message-input></message-input>
+        <message-input style="position:relative;"></message-input>
     </div>
     <div id="content">
     </div>
