--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -115,6 +115,7 @@
       <tr class="conntype_ollama_api">
         <td><label>
           <span>__MSG_prefs_Ollama_Host__</span>
+          <br><i style="font-size:smaller;">__MSG_prefs_Ollama_Host_Info__ http://127.0.0.1:11434</i>
         </label></td>
         <td>
           <label>
