--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.1.1 - 28/08/2024</h2>
       <ul>
-        <li>...</li>
+        <li><i>[ChatGPT API]</i> Fixed a bug in handling the chat window.</li>
       </ul>
         <h2>Version 2.1.0 - 28/08/2024</h2>
         <ul>
