--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 2.1.2 - ??/??/2024</h2>
+      <ul>
+        <li>...</li>
+      </ul>
       <h2>Version 2.1.1 - 28/08/2024</h2>
       <ul>
         <li><i>[ChatGPT API]</i> Fixed a bug in handling the chat window.</li>
