--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.1.2 - ??/??/2024</h2>
       <ul>
+        <li><i>[ChatGPT API]</i> The URL in the prompt sending error message is now correctly clickable [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.1 - 28/08/2024</h2>
