--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,6 +11,7 @@
       <ul>
         <li><i>[ChatGPT API]</i> The URL in the prompt sending error message is now correctly clickable [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
         <li><i>[ChatGPT API]</i> If the web interface loads slowly, a button is now shown to retry sending the prompt [<a href="https://github.com/micz/ThunderAI/issues/122">#122</a>].</li>
+        <li><i>[ChatGPT API]</i> Improved the mathos to open the ChatGPT window and interact with it.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.1 - 28/08/2024</h2>
