--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 2.1.3 - 04/09/2024</h2>
+      <ul>
+        <li><i>[ChatGPT API]</i> Removed a link to the status page in an error message as requested by Thunderbird Addon Reviewer.</li>
+      </ul>
       <h2>Version 2.1.2 - 04/09/2024</h2>
       <ul>
         <li><i>[ChatGPT API]</i> The URL in the prompt sending error message is now correctly clickable [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
