--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.1.4 - ??/??/2024</h2>
       <ul>
+        <li><i>[ChatGPT API][Ollama API]</i> Fixed the colors of the light theme in the chat window status logger.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.3 - 04/09/2024</h2>
