--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,20 +7,20 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.1.4 - ??/??/2024</h2>
+      <h2>Version 2.1.4 - 11/09/2024</h2>
       <ul>
         <li><i>[ChatGPT API][Ollama API]</i> Fixed the colors of the light theme in the chat window status logger.</li>
-        <li>...</li>
+        <li><i>[ChatGPT Web]</i> Correctly handling a change in the web interface [<a href="https://github.com/micz/ThunderAI/issues/133">#133</a>].</li>
       </ul>
       <h2>Version 2.1.3 - 04/09/2024</h2>
       <ul>
-        <li><i>[ChatGPT API]</i> Removed a link to the status page in an error message as requested by Thunderbird Addon Reviewer. Reverted [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
+        <li><i>[ChatGPT Web]</i> Removed a link to the status page in an error message as requested by Thunderbird Addon Reviewer. Reverted [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
       </ul>
       <h2>Version 2.1.2 - 04/09/2024</h2>
       <ul>
-        <li><i>[ChatGPT API]</i> The URL in the prompt sending error message is now correctly clickable [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
-        <li><i>[ChatGPT API]</i> If the web interface loads slowly, a button is now shown to retry sending the prompt [<a href="https://github.com/micz/ThunderAI/issues/122">#122</a>].</li>
-        <li><i>[ChatGPT API]</i> Improved the methods to open the ChatGPT window and interact with it.</li>
+        <li><i>[ChatGPT Web]</i> The URL in the prompt sending error message is now correctly clickable [<a href="https://github.com/micz/ThunderAI/issues/123">#123</a>].</li>
+        <li><i>[ChatGPT Web]</i> If the web interface loads slowly, a button is now shown to retry sending the prompt [<a href="https://github.com/micz/ThunderAI/issues/122">#122</a>].</li>
+        <li><i>[ChatGPT Web]</i> Improved the methods to open the ChatGPT window and interact with it.</li>
       </ul>
       <h2>Version 2.1.1 - 28/08/2024</h2>
       <ul>
