--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -71,6 +71,7 @@
               <option value="chatgpt_web">__MSG_prefs_Connection_type_ChatGTP_Web__</option>
               <option value="chatgpt_api">__MSG_prefs_Connection_type_ChatGTP_API__</option>
               <option value="ollama_api">__MSG_prefs_Connection_type_Ollama_API__</option>
+              <option value="openai_comp_api">__MSG_prefs_Connection_type_OpenAI_Comp_API__</option>
             </select>
           </label>
         </td>
@@ -114,8 +115,8 @@
       </tr>
       <tr class="conntype_ollama_api">
         <td><label>
-          <span>__MSG_prefs_Ollama_Host__</span>
-          <br><i style="font-size:smaller;">__MSG_prefs_Ollama_Host_Info__ http://127.0.0.1:11434</i>
+          <span>__MSG_prefs_API_Host__</span>
+          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
         </label></td>
         <td>
           <label>
@@ -134,6 +135,32 @@
           <button id="btnUpdateOllamaModels">__MSG_Ollama_Models_Fetch__</button> <span id="ollama_model_fetch_loading">__MSG_Loading__</span><br>
           <label>
             <select id="ollama_model" name="ollama_model" class="option-input">
+            </select>
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api">
+        <td><label>
+          <span>__MSG_prefs_API_Host__</span>
+          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" style="width:28em" />
+            &nbsp;<span></span>
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api">
+        <td>
+          <label>
+            <span>__MSG_OpenAIComp_Models__</span>
+          </label>
+        </td>
+        <td>
+          <button id="btnUpdateOpenAICompModels">__MSG_OpenAIComp_Models_Fetch__</button> <span id="openai_comp_model_fetch_loading">__MSG_Loading__</span><br>
+          <label>
+            <select id="openai_comp_model" name="openai_comp_model" class="option-input">
             </select>
           </label>
         </td>
