--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -165,6 +165,18 @@
           </label>
         </td>
       </tr>
+      <tr class="conntype_openai_comp_api">
+        <td><label>
+          <span>__MSG_prefs_OpenAIComp_ChatName__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="openai_comp_chat_name" name="openai_comp_chat_name" class="option-input" style="width:14em" />
+            <br>__MSG_prefs_OpenAIComp_ChatName_Info__
+            &nbsp;<span></span>
+          </label>
+        </td>
+      </tr>
       <tr>
         <td><label>
           <span>__MSG_Debug__</span>
