information added to the option page for the OpenAI Comp integration. see #126

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -194,9 +194,10 @@
     </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
-      <p><span class="conntype_chatgpt_web">__MSG_prefsInfoDesc_1__<br/></span>
-        <span class="conntype_chatgpt_api">__MSG_prefsInfoDesc_2__<br/></span>
-          <span class="conntype_ollama_api">__MSG_prefsInfoDesc_3__</span></p>
+      <p><span class="conntype_chatgpt_web">__MSG_prefsInfoDesc_1__<br></span>
+        <span class="conntype_chatgpt_api">__MSG_prefsInfoDesc_2__<br></span>
+        <span class="conntype_ollama_api">__MSG_prefsInfoDesc_3__<br></span>
+        <span class="conntype_openai_comp_api">__MSG_prefsInfoDesc_4__</span></p>
     </div>
     <div id="miczTranslate">__MSG_TranslateText__ <a href="https://micz.it/thunderbird-addon-thunderai/translate/">__MSG_TranslateLink__</a></div>
     <div id="miczDonation">__MSG_prefsDonation_1__<br/><a href="http://micz.it/thunderbird-addon-thunderai/donate/">__MSG_prefsDonation_2__</a></div>
