options page columns width fixed between different connection types

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -83,7 +83,7 @@
         </label></td>
         <td>
           <label>
-            <input type="text" id="chatgpt_api_key" name="chatgpt_api_key" class="option-input" style="width:28em" />
+            <input type="text" id="chatgpt_api_key" name="chatgpt_api_key" class="option-input" style="width:20em" />
             &nbsp;<span></span>
           </label>
         </td>
@@ -109,7 +109,7 @@
         </label></td>
         <td>
           <label>
-            <input type="text" id="ollama_host" name="ollama_host" class="option-input" style="width:28em" />
+            <input type="text" id="ollama_host" name="ollama_host" class="option-input" style="width:14em" />
             &nbsp;<span></span>
           </label>
         </td>
@@ -135,7 +135,7 @@
         </label></td>
         <td>
           <label>
-            <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" style="width:28em" />
+            <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" style="width:14em" />
             &nbsp;<span></span>
           </label>
         </td>
@@ -167,7 +167,7 @@
         </td>
       </tr>
       <tr>
-        <td><label>
+        <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
         </label></td>
         <td>
