--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.2.0 - ??/??/2024</h2>
       <ul>
-        <li><i>[ChatGPT Web]</i> Removed the option to force che ChatGPT4 model over ChatGPT3.5, since it was useless now.</li>
+        <li><i>[ChatGPT Web]</i> Removed the option to force the ChatGPT4 model over ChatGPT3.5, since it was useless now.</li>
         <li><i>[OpenAI Comp API]</i> Added a new integration method to use a local LLM via an API compatible with OpenAI's API specifications [<a href="https://github.com/micz/ThunderAI/issues/126">#126</a>].</li>
         <li>...</li>
       </ul>
