storage space occupied added. see #129

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>__MSG_customPrompts_managePrompts__</h1>
+        <h1 class="page_title">__MSG_customPrompts_managePrompts__</h1>
         <p>__MSG_customPrompts_managePrompts_info_default__<br>
             __MSG_customPrompts_managePrompts_info_default_2__<br>
             __MSG_customPrompts_managePrompts_info_default_3__
@@ -92,9 +92,9 @@
             </tbody>
           </table>
     </div>
+    <div class="storage_space">__MSG_StorageSpace__: <span id="storage_space"></span></div>
     <script src="list.js"></script>
     <script src="mzta-custom-prompts.js" type="module"></script>
     <script src="../js/mzta-i18n.js"></script>
 </body>
 </html>
-
