--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,6 +11,7 @@
       <ul>
         <li><i>[ChatGPT Web]</i> Removed the option to force the ChatGPT4 model over ChatGPT3.5, since it was useless now.</li>
         <li><i>[OpenAI Comp API]</i> Added a new integration method to use a local LLM via an API compatible with OpenAI's API specifications [<a href="https://github.com/micz/ThunderAI/issues/126">#126</a>].</li>
+        <li>Custom Prompts storage space incremented to 5MB, using <pre>storage.local<pre>. Added also the total occupied space at the bottom of the Custom Prompts page [<a href="https://github.com/micz/ThunderAI/issues/129">#129</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
