openai comp api host example updated

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -131,7 +131,7 @@
       <tr class="conntype_openai_comp_api">
         <td><label>
           <span>__MSG_prefs_API_Host__</span>
-          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
+          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://localhost:1234</i>
         </label></td>
         <td>
           <label>
