popup menu graphics fixed. see #130

--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -9,6 +9,7 @@
 
 <body>
 <div id="mzta_search_banner">
+    <div class="_spacer_div">&nbsp;</div>
     <input type="text" id="mzta_search_input" placeholder="__MSG_SearchPrompt__">
     <div id="mzta_autocomplete-items" style="display: none;"></div>
 </div>
