--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -9,8 +9,9 @@
 
 <body>
 <div id="mzta_search_banner">
-    <div class="_spacer_div">&nbsp;</div>
+    <div id="_spacer_div">&nbsp;</div>
     <input type="text" id="mzta_search_input" placeholder="__MSG_SearchPrompt__">
+    <div id="mzta_autocomplete-items-loading"><img src="mzta-loading.svg" title="__MSG_Loading__"></div>
     <div id="mzta_autocomplete-items" style="display: none;"></div>
 </div>
 <script src="mzta-popup.js" type="module"></script>
