dynamic_menu_force_enter option added. see #130

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -60,6 +60,17 @@
         </td>
       </tr>
       <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_dynamic_menu_force_enter__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="dynamic_menu_force_enter" name="dynamic_menu_force_enter" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_dynamic_menu_force_enter_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr>
         <td>
           <label>
             <span>__MSG_prefs_Connection_type__</span>
