--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,9 +7,9 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.1.5 - ??/09/2024</h2>
+      <h2>Version 2.1.5 - 23/09/2024</h2>
       <ul>
-        <li>...</li>
+        <li><i>[ChatGPT Web]</i> Working again in Thunderbird 115. Implemented a workaround for <i>Intl.Segmenter</i> [<a href="https://github.com/micz/ThunderAI/issues/139">#139</a>].</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
       <ul>
