dynamic_menu_order_prompt_alphabetically option added

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -61,6 +61,17 @@
       </tr>
       <tr>
         <td><label>
+          <span>__MSG_prefs_OptionText_dynamic_menu_order_prompt_alphabetically__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="dynamic_menu_order_prompt_alphabetically" name="dynamic_menu_order_prompt_alphabetically" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_dynamic_menu_order_prompt_alphabetically_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td><label>
           <span>__MSG_prefs_OptionText_dynamic_menu_force_enter__</span>
         </label></td>
         <td>
