adde info to set the dimensions to 0

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -18,7 +18,7 @@
         </td>
       </tr>
       <tr>
-        <td></td>
+        <td><i>__MSG_prefs_OptionText_chatgpt_win_dims_info__</i></td>
         <td>
           <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_width__</span>
           <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" />
