--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -15,6 +15,7 @@
         <li><i>[ChatGPT Web]</i> Updated the information in the option page.</li>
         <li>A new dynamic menu for selecting prompts has been added. In addition to clicking the ThunderAI button, you can now use the CTRL+ALT+A keyboard shortcut [<a href="https://github.com/micz/ThunderAI/issues/130">#130</a>].</li>
         <li>Added an option to order alphabetically the prompts in the menu.</li>
+        <li>Allowing 0 as dimensions for the chat window in the options page to avoid problems like with NixOS/Hyprland [<a href="https://github.com/micz/ThunderAI/issues/137">#137</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
