--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -19,6 +19,7 @@
         <li>Allow 0 as the dimensions for the chat window in the options page to prevent issues, such as those encountered with NixOS/Hyprland [<a href="https://github.com/micz/ThunderAI/issues/137">#137</a>].</li>
         <li>Is now possible to ask for additional text before sending the prompts also for default prompts [<a href="https://github.com/micz/ThunderAI/issues/135">#135</a>].</li>
         <li>Fixed a bug that occurred when importing prompts after an export without closing the Custom Prompts page.</li>
+        <li>Brazilian Portuguese (pt-br) translation added, thanks to Bruno Pereira de Souza.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
