added a link to the cors info page

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -208,7 +208,7 @@
       <p>
         <span class="conntype_chatgpt_web">__MSG_prefsInfoDesc_1__<br></span>
         <span class="conntype_chatgpt_api">__MSG_prefsInfoDesc_2__<br></span>
-        <span class="conntype_ollama_api">__MSG_prefsInfoDesc_3__<br></span>
+        <span class="conntype_ollama_api">__MSG_prefsInfoDesc_3__ [<a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">__MSG_customPrompts_managePrompts_help__</a>]<br></span>
         <span class="conntype_openai_comp_api">__MSG_prefsInfoDesc_4__</span>
         <br><span>__MSG_prefsInfoDesc_5__
           <br>__MSG_prefsInfoDesc_6__</span>
