--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -20,7 +20,7 @@
         <li>Is now possible to ask for additional text before sending the prompts also for default prompts [<a href="https://github.com/micz/ThunderAI/issues/135">#135</a>].</li>
         <li>Fixed a bug that occurred when importing prompts after an export without closing the Custom Prompts page.</li>
         <li>Brazilian Portuguese (pt-br) translation added, thanks to Bruno Pereira de Souza.</li>
-        <li>...</li>
+        <li><i>[Ollama API]</i> Added a link to the <a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">CORS information page</a>.</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
       <ul>
