openai comp apikey added in the options page

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -104,11 +104,11 @@
           <span>__MSG_prefs_ChatGPT_API_Key__</span>
         </label></td>
         <td>
-          <div class="chatgpt_api_key-container">
+          <div class="api_key-container">
             <label>
               <input type="password" id="chatgpt_api_key" name="chatgpt_api_key" class="option-input"/>
             </label>
-            <span class="toggle-icon" id="togglePassword"><img src="../images/pwd-show.png" id="pwd-icon"></span>
+            <span class="toggle-icon" id="toggle_chatgpt_api_key"><img src="../images/pwd-show.png" id="pwd-icon_chatgpt_api_key"></span>
           </div>
         </td>
       </tr>
@@ -160,6 +160,20 @@
           <label>
             <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" />
           </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api">
+        <td><label>
+          <span>__MSG_prefs_OpenAIComp_API_Key__</span>
+          <br><i style="font-size:smaller;">__MSG_Optional__</i>
+        </label></td>
+        <td>
+          <div class="api_key-container">
+            <label>
+              <input type="password" id="openai_comp_api_key" name="openai_comp_api_key" class="option-input"/>
+            </label>
+            <span class="toggle-icon" id="toggle_openai_comp_api_key"><img src="../images/pwd-show.png" id="pwd-icon_openai_comp_api_key"></span>
+          </div>
         </td>
       </tr>
       <tr class="conntype_openai_comp_api">
