--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -21,6 +21,7 @@
         <li>Fixed a bug that occurred when importing prompts after an export without closing the Custom Prompts page.</li>
         <li>Brazilian Portuguese (pt-br) translation added, thanks to Bruno Pereira de Souza.</li>
         <li><i>[Ollama API]</i> Added a link to the <a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">CORS information page</a>.</li>
+        <li><i>[ChatGPT API][Ollama API][OpenAI Comp API]</i> Improved handling of streaming responses even in case of broken chunks [<a href="https://github.com/micz/ThunderAI/issues/147">#147</a>].</li>
       </ul>
       <h2>Version 2.1.4 - 11/09/2024</h2>
       <ul>
