adde a workaround for chatgpt web login issues. see #155

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -99,6 +99,14 @@
         </td>
       </tr>
       <tr>
+      <tr class="conntype_chatgpt_web">
+        <td><label>
+          <span>__MSG_OpenChatGPTTab_Info__</span>
+        </label></td>
+        <td>
+            <button id="btnChatGPTWeb_Tab">__MSG_OpenChatGPTTab__</button>
+        </td>
+      </tr>
       <tr class="conntype_chatgpt_api">
         <td><label>
           <span>__MSG_prefs_ChatGPT_API_Key__</span>
