--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -34,7 +34,10 @@
             <td rowspan="2" class="w25">
                 <label for="txtTextNew">*__MSG_customPrompts_form_label_Text__:</label>
                 <br>
-                <textarea id="txtTextNew" name="text" class="input_new text_output" tabindex="3"></textarea>
+                <div class="autocomplete-container">
+                    <textarea id="txtTextNew" name="text" class="input_new text_output editor" tabindex="3"></textarea>
+                    <ul class="autocomplete-list hidden"></ul>
+                </div>
             </td>
             <td class="w19">
                 <label for="selectTypeNew">__MSG_customPrompts_add_to_menu__:</label>
