autocomplete. closing suggestions when clicking outside the list. see #157

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -42,7 +42,7 @@
             <td class="w19">
                 <label for="selectTypeNew">__MSG_customPrompts_add_to_menu__:</label>
                 <br>
-                <select id="selectTypeNew" name="type" tabindex="4">
+                <select id="selectTypeNew" name="type" tabindex="4" class="type_selector">
                     <option value="0">__MSG_customPrompts_add_to_menu_always__</option>
                     <option value="1">__MSG_customPrompts_add_to_menu_reading__</option>
                     <option value="2">__MSG_customPrompts_add_to_menu_composing__</option>
