--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.3.0 - ??/??/2024</h2>
       <ul>
+        <li>On the custom prompts page, when editing a prompt, pressing the cancel button will revert any modified values in the form to their saved state.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.2.1 - 11/10/2024</h2>
