--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.2.2 - ??/??/2024</h2>
       <ul>
+        <li>All APIs error messages handling improved.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.2.1 - 11/10/2024</h2>
