openai_comp_use_v1 pref added

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -172,6 +172,17 @@
       </tr>
       <tr class="conntype_openai_comp_api">
         <td><label>
+          <span>__MSG_prefs_OptionText_openai_comp_use_v1__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="openai_comp_use_v1" name="openai_comp_use_v1" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_openai_comp_use_v1_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api">
+        <td><label>
           <span>__MSG_prefs_OpenAIComp_API_Key__</span>
           <br><i style="font-size:smaller;">__MSG_Optional__</i>
         </label></td>
