--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,10 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.2.2 - ??/??/2024</h2>
+      <h2>Version 2.2.2 - 15/10/2024</h2>
       <ul>
-        <li>All APIs error handling improved.</li>
-        <li>...</li>
+        <li>APIs error handling improved.</li>
+        <li><i>[OpenAI Comp API]</i> Added an option to remove the <i>v1</i> segment in the API calls path [<a href="https://github.com/micz/ThunderAI/issues/161">#161</a>].</li>
       </ul>
       <h2>Version 2.2.1 - 11/10/2024</h2>
       <ul>
