placeholders_use_default_value option added and implemented. see #146

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -82,6 +82,17 @@
         </td>
       </tr>
       <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_placeholders_use_default_value__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="placeholders_use_default_value" name="placeholders_use_default_value" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_placeholders_use_default_value_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr>
         <td>
           <label>
             <span>__MSG_prefs_Connection_type__</span>
