--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -221,6 +221,15 @@
         </td>
       </tr>
       <tr>
+        <td><span>__MSG_prefs_OptionText_max_prompt_length__</span></td>
+        <td>
+          <label>
+            <input type="number" id="max_prompt_length" name="max_prompt_length" class="option-input" />
+            <br>__MSG_prefs_OptionText_max_prompt_length_Info__
+          </label>
+        </td>
+      </tr>
+      <tr>
         <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
         </label></td>
