max_prompt_length also hidden when using chatgpt_web. see #165

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -220,7 +220,7 @@
           </label>
         </td>
       </tr>
-      <tr>
+      <tr id="max_prompt_length_tr">
         <td><span>__MSG_prefs_OptionText_max_prompt_length__</span></td>
         <td>
           <label>
