[chatgpt web] Now it is possible to specify the model to use and the temporary chat. see #169 and #171

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -112,6 +112,28 @@
       <tr>
       <tr class="conntype_chatgpt_web">
         <td><label>
+          <span>__MSG_prefs_OptionText_chatgpt_web_model__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="chatgpt_web_model" name="chatgpt_web_model" class="option-input" />
+            <br>__MSG_prefs_OptionText_chatgpt_web_model_info__
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_chatgpt_web">
+        <td><label>
+          <span>__MSG_prefs_OptionText_chatgpt_web_tempchat__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="chatgpt_web_tempchat" name="chatgpt_web_tempchat" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_chatgpt_web_tempchat_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_chatgpt_web">
+        <td><label>
           <span>__MSG_OpenChatGPTTab_Info__</span>
         </label></td>
         <td>
