added a loading indicator in the menu when sending a prompt

--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -10,6 +10,7 @@
 <body>
 <div id="mzta_search_banner">
     <div id="_spacer_div">&nbsp;</div>
+    <div id="mzta_sending_prompt"><img src="mzta-loading.svg" title="__MSG_SendingPrompt__"></div>
     <input type="text" id="mzta_search_input" placeholder="__MSG_SearchPrompt__">
     <div id="mzta_autocomplete-items-loading"><img src="mzta-loading.svg" title="__MSG_Loading__"></div>
     <div id="mzta_autocomplete-items" style="display: none;"></div>
