--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -17,6 +17,7 @@
         <li><i>[ChatGPT Web]</i> Added an option to set the model to use [<a href="https://github.com/micz/ThunderAI/issues/171">#171</a>].</li>
         <li><i>[ChatGPT Web]</i> Added an option to use the temporary chat [<a href="https://github.com/micz/ThunderAI/issues/169">#169</a>].</li>
         <li>A few typos fixed [<a href="https://github.com/micz/ThunderAI/issues/170">#170</a>].</li>
+        <li>Added a loading indicator in the menu when sending a prompt.</li>
         <li>...</li>
       </ul>
       <h2>Version 2.2.1 - 11/10/2024</h2>
