chatgpt web models list added in the options page

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -113,6 +113,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span>__MSG_prefs_OptionText_chatgpt_web_model__</span>
+          <br><table><tr><td><i style="font-size:smaller;"><nobr>__MSG_AllowedValues__:</nobr></i></td><td><i style="font-size:smaller;"> &nbsp; <nobr>gpt-4o</nobr> &nbsp; <nobr>gpt-4o-mini</nobr> &nbsp; <nobr>gpt-4</nobr> &nbsp; <nobr>o1-mini</nobr> &nbsp; <nobr>o1-preview</nobr></i></td></tr></table>
         </label></td>
         <td>
           <label>
