data placeholders info links added

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -266,6 +266,7 @@
     </table>
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
+        <br>__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a>
     </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
