--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -10,8 +10,8 @@
         <h1 class="page_title">__MSG_customPrompts_managePrompts__</h1>
         <p>__MSG_customPrompts_managePrompts_info_default__<br>
             __MSG_customPrompts_managePrompts_info_default_2__<br>
-            __MSG_customPrompts_managePrompts_info_default_3__
-            <br><a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
+            __MSG_customPrompts_managePrompts_info_default_3__ <a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a>
+        <br>__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a></p>
     </div>
     <div id="import_export">
         <button id="btnExportAll">__MSG_customPrompts_ExportAll__</button><br>
