--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 2.3.1 - 24/10/2024</h2>
       <ul>
-        <li>...</li>
+        <li>Reverted the position of the action button in the compose window [<a href="https://github.com/micz/ThunderAI/issues/175">#175</a>].</li>
       </ul>
       <h2>Version 2.3.0 - 23/10/2024</h2>
       <ul>
