--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 2.3.3 - 29/11/2024</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Correctly sending the prompt even if the audio button is present on the web interface [<a href="https://github.com/micz/ThunderAI/issues/188">#188</a>].</li>
+        <li><i>[ChatGPT Web]</i> The input filed is always visibile [<a href="https://github.com/micz/ThunderAI/issues/189">#189</a>].</li>
       </ul>
       <h2>Version 2.3.2 - 31/10/2024</h2>
       <ul>
