--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 2.3.4 - ??/??/2024</h2>
+      <ul>
+        <li>...</li>
+      </ul>
       <h2>Version 2.3.3 - 29/11/2024</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Correctly sending the prompt even if the audio button is present on the web interface [<a href="https://github.com/micz/ThunderAI/issues/188">#188</a>].</li>
