--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,9 +7,9 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 2.3.4 - ??/??/2024</h2>
+      <h2>Version 2.3.4 - 06/12/2024</h2>
       <ul>
-        <li>...</li>
+        <li><i>[ChatGPT API]</i> Correctly showwing an error message received from the ChatGPT API [<a href="https://github.com/micz/ThunderAI/issues/191">#191</a>].</li>
       </ul>
       <h2>Version 2.3.3 - 29/11/2024</h2>
       <ul>
