add_tags option added. see #183

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -266,6 +266,15 @@
           </label>
         </td>
       </tr>
+      <tr id="add_tags_tr">
+        <td><span>__MSG_prefs_OptionText_add_tags__</span></td>
+        <td>
+          <label>
+            <input type="checkbox" id="add_tags" name="add_tags" class="option-input" />
+            __MSG_prefs_OptionText_add_tags_Info__
+          </label>
+        </td>
+      </tr>
       <tr>
         <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
