add_tags_maxnum option added. see #183

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -266,12 +266,21 @@
           </label>
         </td>
       </tr>
-      <tr id="add_tags_tr">
+      <tr class="add_tags_tr">
         <td><span>__MSG_prefs_OptionText_add_tags__</span></td>
         <td>
           <label>
             <input type="checkbox" id="add_tags" name="add_tags" class="option-input" />
             __MSG_prefs_OptionText_add_tags_Info__
+          </label>
+        </td>
+      </tr>
+      <tr class="add_tags_tr">
+        <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
+        <td>
+          <label>
+            <input type="number" id="add_tags_maxnum" name="add_tags_maxnum" class="option-input" />
+            <br>__MSG_prefs_OptionText_add_tags_maxnum_Info__
           </label>
         </td>
       </tr>
